Fixed bug where after logout user had to login twice to reach MainActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,12 @@
     <string name="register_reenter_password_hint">Re-Enter Password</string>
     <string name="register_header">Register Your Account</string>
     <string name="register_button">Confirm</string>
+    <!-- Strings related to activity_main_drawer -->
+    <string name="option_one">Option One</string>
+    <string name="option_two">Option Two</string>
+    <string name="option_three">Option Three</string>
+    <string name="option_four">Option Four</string>
+    <string name="account_menu">Account Menu</string>
+    <string name="edit_account">Edit Account</string>
+    <string name="log_out">Log Out</string>
 </resources>
